@@ -1,0 +1,7 @@
+Processing test59...
+
+Warnings...
+
+test_input/test59.py:4: Modifying parameter (c) with a default value may have unexpected consequences
+test_input/test59.py:5: Modifying parameter (d) with a default value may have unexpected consequences
+test_input/test59.py:18: Modifying parameter (x) with a default value may have unexpected consequences
